2011-12-02 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCcse.c,
	  src/SDCCicode.h:
	  Rename IS_ASSOCIATIVE to IS_COMMUTATIVE.

2011-12-01 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c,
	  src/z80/peeph-z80.def:
	  Minor improvements in pointer handling for the z80 backends.

2011-12-01 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCClabel.c:
	  Disable hidden jump-to-jump optimization for mcs51, since it breaks large and huge.

2011-11-30 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug3440327.c:
	  Disable bug 3440327 test on mcs51.

2011-11-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.c:
	  Cleanup leftover warning.

2011-11-29 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c,
	  src/z80/peeph-z80.def:
	  Some small improvements to the generated code.

2011-11-29 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc,
	  support/regression/tests/bug3444293.c:
	  Fixed bug #3444293.

2011-11-28 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/bug3440327.c:
	  Regression test for bug #3440327.

2011-11-28 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCClabel.c:
	  Optimize hidden jump-to-jump.

2011-11-28 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Replaced some uses of isLastUse() by the safer isPairDead().

2011-11-28 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* Merged the addrspacequal branch (named address spaces).

2011-11-28 Borut Razem <borut.razem AT gmail.com>

	* sim/ucsim/libltdl: direcrory removed since it is not used
	* support/scripts/gen_known_bugs.pl: warious fixes
	* src/pic16/ralloc.c, sim/ucsim/pobj.cc, sim/ucsim/utils.cc,
	  sdas/linksrc/lkmain.c: